# hbs-report-generator

./: .env  Dockerfile  README.md  generator-docker.sh  generator-local.sh  generator.py  hubstaff.py  pyproject.toml  test_generator.py
templates/: report.html
